fix overflow

--- a/app/styles/_boards.scss
+++ b/app/styles/_boards.scss
@@ -4,10 +4,10 @@
 
 .boards {
   list-style: none;
-  height: 100%;
   margin: 0;
   padding: 1em;
   overflow-y: auto;
+  overflow-x: hidden;
 
   .board {
     border-radius: 4px;
